# E-Commerce_Shop_Backend

./: README.md  main.py  pyproject.toml
routers/: categories.py  deliveries.py  orders.py  payments.py  products.py  reviews.py  users.py
src/e_commerce/: __init__.py
