[project]
name = "e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Davut2005", email = "2005davut55@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
